--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,9 @@
 
 
     /* cores */ 
-    --cor-1: #180f4A ;
+    --cor-1: #180f4A;
     --cor-2: #ff2978;
+    --cor-3: #090422;
 }
 
 * {
@@ -30,6 +31,8 @@ body {
     height: 100px;
     background-color: white; 
     place-items: center;
+    width: 100%;
+    position: fixed;
 }
 
 .logo {
@@ -82,6 +85,7 @@ header {
     justify-content: center;
     align-items: center;
     background-color: white;
+    padding-top: 100px;
 }
 
 .headline {
@@ -137,12 +141,11 @@ header {
 section {
     display: inline-block;
     margin-top: 80px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-left: 5%;
     margin-right: 5%;
     padding: 5%;
     text-align: center;
-    width: 90%;
 }
 
 section h2 {
@@ -165,4 +168,56 @@ section h2 {
     padding: 20px;
     margin: 1%;
     border: 1px solid var(--cor-2);
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.texto-oculto { 
+    display: none;
+}
+
+.card:hover {
+    background: var(--cor-2);
+    color: white;
+    padding: 40px;
+}
+
+.card:hover img {
+    display: none;
+}
+
+.card:hover .card-text {
+    display: none;
+}
+
+.card:hover .texto-oculto {
+    display: block;
+}
+
+/* Footer */
+
+footer {
+    margin-top:  100px;
+    height: 400px;
+    background-image: linear-gradient(180deg, var(--cor-1), var(--cor-3), black);
+    text-align: center;
+    border-top: 5px solid var(--cor-2);
+}
+
+.logo-rodape {
+    padding: 100px;
+}
+
+.agencia {
+    font-family: var(--fonte-lobster);
+    color: white;
+    font-size: 34px;
+}
+
+#footer-p {
+    color: white;
+}
+
+b {
+    color: white;
 }
