--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
-@media screen and (max-width: 1005) {
+@media screen and (max-width: 1000px) {
+    
     .navbar {
         position: relative;
     }
